packages/starling/output.txt
rm -Rf ./.cache
yarn develop
yarn run v1.15.2
$ gatsby develop
success open and validate gatsby-configs — 0.024 s

[0m
[0m  [0m[97m[41mError[0m[37m[41m:[0m[37m[41m [0m[97m[41m/Users/tracer/dev/openmob/packages/starling/gatsby-node.js:2[0m
[0m  [0m[97m[41mimport { GraphQLString } from "gatsby/graphql"[0m
[0m  [0m[97m[41m       ^[0m
[0m  [0m[97m[41mSyntaxError: Unexpected token {[0m
[0m  [0m
[0m  [0m[90m-[0m [0m[93mv8-compile-cache.js[0m[90m:[0m[93m226[0m[37m [0m[37mNativeCompileCache._moduleCompile[0m
[0m  [0m  [0m[90m[starling]/[v8-compile-cache]/v8-compile-cache.js:226:18[0m
[0m  [0m
[0m  [0m[90m-[0m [0m[93mv8-compile-cache.js[0m[90m:[0m[93m172[0m[37m [0m[37mModule._compile[0m
[0m  [0m  [0m[90m[starling]/[v8-compile-cache]/v8-compile-cache.js:172:36[0m
[0m  [0m
[0m  [0m[90m-[0m [0m[93mloader.js[0m[90m:[0m[93m745[0m[37m [0m[37mObject.Module._extensions..js[0m
[0m  [0m  [0m[90minternal/modules/cjs/loader.js:745:10[0m
[0m  [0m
[0m  [0m[90m-[0m [0m[93mloader.js[0m[90m:[0m[93m626[0m[37m [0m[37mModule.load[0m
[0m  [0m  [0m[90minternal/modules/cjs/loader.js:626:32[0m
[0m  [0m
[0m  [0m[90m-[0m [0m[93mloader.js[0m[90m:[0m[93m566[0m[37m [0m[37mtryModuleLoad[0m
[0m  [0m  [0m[90minternal/modules/cjs/loader.js:566:12[0m
[0m  [0m
[0m  [0m[90m-[0m [0m[93mloader.js[0m[90m:[0m[93m558[0m[37m [0m[37mFunction.Module._load[0m
[0m  [0m  [0m[90minternal/modules/cjs/loader.js:558:3[0m
[0m  [0m
[0m  [0m[90m-[0m [0m[93mloader.js[0m[90m:[0m[93m663[0m[37m [0m[37mModule.require[0m
[0m  [0m  [0m[90minternal/modules/cjs/loader.js:663:17[0m
[0m  [0m
[0m  [0m[90m-[0m [0m[93mv8-compile-cache.js[0m[90m:[0m[93m159[0m[37m [0m[37mrequire[0m
[0m  [0m  [0m[90m[starling]/[v8-compile-cache]/v8-compile-cache.js:159:20[0m
[0m  [0m
[0m  [0m[90m-[0m [0m[93mresolve-module-exports.js[0m[90m:[0m[93m124[0m[37m [0m[37mmodule.exports[0m
[0m  [0m  [0m[90m[starling]/[gatsby]/dist/bootstrap/resolve-module-exports.js:124:26[0m
[0m  [0m
[0m  [0m[90m-[0m [0m[93mvalidate.js[0m[90m:[0m[93m122[0m[37m [0m[37mflattenedPlugins.forEach.plugin[0m
[0m  [0m  [0m[90m[starling]/[gatsby]/dist/bootstrap/load-plugins/validate.js:122:31[0m
[0m  [0m
[0m  [0m[90m-[0m [0m[37mArray.forEach[0m
[0m  [0m
[0m  [0m[90m-[0m [0m[93mvalidate.js[0m[90m:[0m[93m115[0m[37m [0m[37mcollatePluginAPIs[0m
[0m  [0m  [0m[90m[starling]/[gatsby]/dist/bootstrap/load-plugins/validate.js:115:20[0m
[0m  [0m
[0m  [0m[90m-[0m [0m[93mindex.js[0m[90m:[0m[93m61[0m[37m [0m
[0m  [0m  [0m[90m[starling]/[gatsby]/dist/bootstrap/load-plugins/index.js:61:15[0m
[0m  [0m
[0m  [0m[90m-[0m [0m[37mGenerator.next[0m
[0m  [0m
[0m
info Visit https://yarnpkg.com/en/docs/cli/run for documentation about this command.
